# CarsShop

./: .gitignore  pyproject.toml  requirements.txt
bot/: bot.py  handlers_user.py
bot_app/: bot.py  handlers_user.py
car/: admin.py  apps.py  models.py  signals.py
car/migrations/: 0001_initial.py  0002_rename_label_bodytype_name_rename_label_color_name_and_more.py  0003_alter_carcontent_user.py  0004_remove_carcontent_user_carcontent_owner_id.py  0005_remove_carcontent_owner_id_carcontent_owner_username.py  0006_carcontent_owner_id_alter_carcontent_owner_username.py  0007_alter_carcontent_owner_id.py  0008_remove_carcontent_owner_id.py  0009_remove_carcontent_owner_username.py  0010_carcontent_user.py  0011_rename_user_carcontent_owner_username.py  0012_carcontent_video_url.py  0013_remove_carcontent_video.py  0014_remove_carcontent_video_url_carcontent_video.py
core/: settings.py
